src/objects/Click_Uploaded_Documents__c.object
<CustomObject>
    <fields>
        <fullName>Click_Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Loans_Required_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Click Loans Required Document</label>
        <referenceTo>Required_Document__c</referenceTo>
        <relationshipLabel>Uploaded Documents</relationshipLabel>
        <relationshipName>Uploaded_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lendi_Uploaded_File_uuid__c</fullName>
        <label>Lendi Uploaded File uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_Key__c</fullName>
        <label>S3 Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_URI__c</fullName>
        <label>S3 URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_Version__c</fullName>
        <label>S3 Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_Document_URL__c</fullName>
        <label>Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>click_Is_deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Uploaded Document</label>
    <nameField>
        <label>Uploaded Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Uploaded Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>